Updated html files with js modules

--- a/html/edit.html
+++ b/html/edit.html
@@ -55,8 +55,15 @@
       </div>
     </section>
   </body>
-  <script src="../js/get.js"></script>
-  <script src="../js/post.js"></script>
-  <script src="../js/put.js"></script>
-  <script src="../js/edit.js"></script>
+  <script type="module" src="./js/renderCharacters.js"></script>
+  <script type="module" src="./js/put.js"></script>
+  <script type="module" src="./js/previewFile.js"></script>
+  <script type="module" src="./js/post.js"></script>
+  <script type="module" src="./js/inputChecker.js"></script>
+  <script type="module" src="./js/getUrlParameter.js"></script>
+  <script type="module" src="./js/getDataInputs.js"></script>
+  <script type="module" src="./js/get.js"></script>
+  <script type="module" src="./js/displayCharacters.js"></script>
+  <script type="module" src="./js/delete.js"></script>
+  <script src="./js/edit.js"></script>
 </html>
