--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     </template>
     <section class="cardPool" id="pool">
     </section>
-    <button class="btn card__button--addnew" id="addBtn">Add a new character to the collection</button>
-    
+    <button class="btn card__button--addnew" id="addBtn">Add a new character to the collection</button>    
     <script type="module" src="./js/renderCharacters.js"></script>
     <script type="module" src="./js/put.js"></script>
     <script type="module" src="./js/previewFile.js"></script>
@@ -43,7 +42,6 @@
     <script type="module" src="./js/get.js"></script>
     <script type="module" src="./js/displayCharacters.js"></script>
     <script type="module" src="./js/delete.js"></script>
-    <script src="./js/index.js"></script>
-    
+    <script type="module" src="./js/index.js"></script>    
 </body>
 </html>
